added project skeleton and init DAO